<resources>
    <string name="app_name">Lumo Naturals</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="find_us">Find Us</string>
    <string name="saved">Saved</string>
    <string name="call_us">Call Us</string>
    <string name="shop_now">Products</string>
    <string name="appointment">Appointment</string>
    <string name="services">Services</string>
    <string name="title_activity_maps">Map</string>
    <string name="sign_in">Sign in</string>
    <string name="enter_password">Enter password</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password_6_16_chars">Password, 6-16 chars</string>
    <string name="username">Username</string>
    <string name="styles">Styles</string>
    <string name="done">Done</string>

    <!-- used as tags for shared element transitions -->
    <string name="transition_drawable">drawable</string>
    <string name="transition_message">name</string>
    <string name="transition_price">price</string>
    <string name="transition_button">details</string>

    <string-array name="examples">
        <item>Appointments</item>
        <item>Swipe to delete</item>
    </string-array>

    <string name="notification_title">New Appointment</string>
    <string name="notification_body">New appointment from a user</string>
    <string name="lumo_naturals">Lumo Naturals</string>
    <string name="login">Login</string>
    <string name="beauty_the_natural_way">Beauty, the natural way.</string>
    <string name="style">Style</string>
    <string name="cleanse">Cleanse</string>
    <string name="condition">Condition</string>
    <string name="moisturize">Moisturize</string>
    <string name="cancel">Cancel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
