<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <!--<group android:id="@+id/home_and_others" android:checkableBehavior="single">-->

        <!--<item android:id="@+id/menu_home"-->
              <!--android:title="Home"-->
              <!--android:icon="@mipmap/ic_home"/>-->

    <!--</group>-->

    <group android:id="@+id/group_2" android:checkableBehavior="single">

        <item android:id="@+id/menu_services"
              android:title="@string/services"
              android:icon="@mipmap/scissors_cutting_hair"/>

    </group>

    <group android:id="@+id/group_3" android:checkableBehavior="single">

        <item android:id="@+id/menu_appointment"
              android:title="@string/appointment"
              android:icon="@mipmap/ic_time"/>
    </group>

    <group android:id="@+id/group_4" android:checkableBehavior="single">

        <item android:id="@+id/menu_shop"
              android:title="@string/shop_now"
              android:icon="@mipmap/shopping_cart"/>

    </group>

    <group android:id="@+id/group_5" android:checkableBehavior="single">

        <item android:id="@+id/menu_call_us"
              android:title="@string/call_us"
              android:icon="@mipmap/female_telemarketer"
            />
    </group>


    <group android:id="@+id/group_6" android:checkableBehavior="single">

        <item android:id="@+id/menu_job"
              android:title="@string/job"
              android:icon="@mipmap/job_search"
            />

    </group>

    <group android:id="@+id/group_7" android:checkableBehavior="single">

        <item android:id="@+id/menu_location"
              android:title="@string/find_us"
              android:icon="@mipmap/ic_place"
            />
    </group>


</menu>