<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/c"
    tools:context="com.example.raynold.saloonapp.activity.SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/reg_display_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:textSize="20sp"
                fancy:met_baseColor="@android:color/white"
                fancy:met_floatingLabel="highlight"
                fancy:met_primaryColor="@android:color/white"
                fancy:met_textColorHint="@android:color/white"
                >

            </com.rengwuxian.materialedittext.MaterialEditText>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/reg_phone_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Phone number"
                android:inputType="number"
                android:textSize="20sp"
                app:met_floatingLabel="highlight"
                app:met_textColor="@android:color/white"
                fancy:met_baseColor="@android:color/white"
                fancy:met_primaryColor="@android:color/white"
                fancy:met_textColorHint="@android:color/white"

                >

            </com.rengwuxian.materialedittext.MaterialEditText>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textSize="20sp"
                fancy:met_baseColor="@android:color/white"
                fancy:met_floatingLabel="highlight"
                fancy:met_primaryColor="@android:color/white"
                fancy:met_textColorHint="@android:color/white"
                >

            </com.rengwuxian.materialedittext.MaterialEditText>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/password_6_16_chars"
                android:inputType="textPassword"
                android:textSize="20sp"
                fancy:met_baseColor="@android:color/white"
                fancy:met_floatingLabel="highlight"
                fancy:met_primaryColor="@android:color/white"
                fancy:met_textColorHint="@android:color/white"
                >

            </com.rengwuxian.materialedittext.MaterialEditText>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/register_re_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:textSize="20sp"
                fancy:met_baseColor="@android:color/white"
                fancy:met_floatingLabel="highlight"
                fancy:met_primaryColor="@android:color/white"
                fancy:met_textColorHint="@android:color/white"
                >

            </com.rengwuxian.materialedittext.MaterialEditText>


        </LinearLayout>
    </ScrollView>


    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/reg_create_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:padding="16dp"
        android:text="@string/done"
        fancy:fb_defaultColor="@android:color/white"
        fancy:fb_focusColor="@color/colorPrimaryDark"
        fancy:fb_radius="4dp"
        fancy:fb_textColor="@color/colorPrimary"
        />

</RelativeLayout>
